--- a/style.css
+++ b/style.css
@@ -44,23 +44,57 @@ div ul li{
   padding: 6px;
   
 }
-main{
+main {
   justify-content: center;
   display: flex;
+  border-top-style: solid;
+  border-color: rgba(0, 0, 0, 0.4);
+  font-family: Arial, Helvetica, sans-serif ;
 }
-.content{
+.content {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  max-width: 1500px;
+  max-width: 1250px;
+  margin-top: 30px;
+  min-width: 500px;
 }
-.card{
+.card {
   display: inline-block;
   margin: 4px 6px;
   position: relative;
 }
 
+.card .percentuale {
+  position: absolute;
+  bottom: 150px;
+  left: 10px;
+  background-color: red;
+  padding: 5px 10px;
+  color: white;
+}
+.card .sostenibilità {
+  position: absolute;
+  bottom: 150px;
+  left: 70px;
+  background-color: green;
+  padding: 5px 10px;
+  color: white;
+}
+.card .heart {
+  position: absolute;
+  top: 25px;
+  right: -10px;
+  background-color: white;
+  padding: 4px 14px;
+}
+.heart {
+  font-size: xx-large;
+}
+.heart:hover{
+  
+}
 .card {
   width: 400px; 
   padding: 10px;
@@ -68,6 +102,22 @@ main{
 }
 
 .card img {
-  width: 400px; 
+  max-width: 400px; 
   height: 600px; 
-  object-fit: cover; 
+  object-fit: cover;
+  min-width: 200px;
+}
+.scontato{
+  color: red;
+  font-weight: 800;
+}
+h1, h2, h3, h4, h5, h6{
+  text-transform: uppercase;
+  font-size: large;
+}
+.brand{
+  font-size: medium;
+}
+.originale{
+  text-decoration: line-through;
+}
